tests/fixtures/invalid/pow_bytes_str_list.py
# Cannot call pow() with Bytes, Str, List[int]
x = pow(b"hello", "hello", [1, 2, 3])
